mobile text overlapping fix

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -250,6 +250,10 @@ h1:nth-child(4) {
 		cursor: pointer;
 	}
 
+	.fig2 {
+		top:35%;
+	}
+
 }
 
 
